--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat:wght@100..900&family=Oswald:wght@200..700&family=Bebas+Neue&family=Poppins:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/your-kit-id.css">
-    <title>Aurum Dining</title>
+    <title>Vijaya Dining</title>
   </head>
   <body>
     <div id="root"></div>
